--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Resort Ball</string>
+
+    <string name="signin">เข้าใช้</string>
+    <string name="signup">สมัครสมาชิก</string>
 </resources>
