--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="signin">เข้าใช้</string>
     <string name="signup">สมัครสมาชิก</string>
+    <string name="user">User</string>
+    <string name="pass">Password</string>
+    <string name="name">name</string>
+    <string name="id_card">id_card</string>
 </resources>
